# dev-notes

./: .gitignore  README.md  pyproject.toml  test.py
src/: backend.py  classes.py  create_executable.py  db_utils.py  decorators.py  find.py  gui.py  home.py  init_config.py  links.py  main.py  notes.py  settings.py
src/2/: main.py
