[project]
name = "dev-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.2",
    "loguru>=0.7.3",
    "nicegui>=2.22.2",
    "pandas>=2.3.1",
    "pyside6>=6.9.1",
    "pywebview>=6.0",
    "qtpy>=2.4.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
